Bug 167062 - Inconsistent handling of the language setting for number formatting
Summary: Inconsistent handling of the language setting for number formatting
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.2.0.1 rc
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-06-17 12:26 UTC by Wolfgang Jäger
Modified: 2025-06-30 11:35 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
The announced erxplications an example (48.67 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-06-17 12:26 UTC, Wolfgang Jäger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Jäger 2025-06-17 12:26:38 UTC
Created attachment 201333 [details]
The announced erxplications an example

Changing the language for the number formats of a cell has the expected effect for the cell, but isn't persistent when the dialog for the same cell is re-opened.
For more details see the attached example.
Just tested: Unchanged under 25.0.0.0.Beta1
Comment 1 Wolfgang Jäger 2025-06-17 12:29:03 UTC
Sorry for my typo! 
The additional test was with 25.8.0.0.beta1, of course
Comment 2 Saburo 2025-06-22 08:45:55 UTC
reproduce
Version: 25.2.4.3 (X86_64) / LibreOffice Community
Build ID: 33e196637044ead23f5c3226cde09b47731f7e27
CPU threads: 12; OS: Windows 11 X86_64 (10.0 build 26100); UI render: default; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

not reproduce
Version: 24.8.7.2 (X86_64) / LibreOffice Community
Build ID: e07d0a63a46349d29051da79b1fde8160bab2a89
CPU threads: 12; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

bibisected with win64-25.2

author	Mike Kaganski
commit f58d07397bd90c16c7b4d576ec9b4e6ee7ee367e

tdf#42989: don't set fake ATTR_VALUE_FORMAT for multi-format selection
Change-Id: Iaed133b19c4d870ff85fd9d2dd69db36318bb28e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179190
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit e6d71b9381aba8531c0ebf635c11508e5389fdc6)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179200
Comment 3 Mike Kaganski 2025-06-22 14:27:43 UTC
https://gerrit.libreoffice.org/c/core/+/186793
Comment 4 Commit Notification 2025-06-22 15:47:00 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c5914045a830e7b3a349d41ff558ae1a873bd71c

tdf#167062: fix ScPatternAttr::HasNumberFormat implementation

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-06-30 11:35:40 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/f6959f2682d4b43464098c1ea4c12887fc276572

tdf#167062: fix ScPatternAttr::HasNumberFormat implementation

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.