tdf#167062: fix ScPatternAttr::HasNumberFormat implementation

It must only return false, when respective item is invalidated.

See ScViewFunc::ApplyAttributes, which may avoid setting cell
number format, when only language has changed; this may create
cells having ATTR_LANGUAGE_FORMAT, but not ATTR_VALUE_FORMAT.
This case must be handled as "having a number format", for the
purposes of preparing item set for number format dialog. See
ScTabViewShell::ExecuteCellFormatDlg, where it is checked and
prepared.

Change-Id: Ida0c8495ce582739a3ddfa0ced392b3d9c7651de
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186793
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins